[package]
name = "ckb-lib-rsa"
version = "0.1.0"
authors = ["dylan <duanyytop@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.7.1"

[build-dependencies]
blake2b-rs = "0.1.5"

[profile.release]
overflow-checks = true
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'